# python-skeleton

./: Makefile  README.md  pyproject.toml  tox.ini
hyperctl/: __init__.py  __main__.py
hyperctl/cmd/: configd_request.py  show_units.py
tests/: test_configd_request.py
